opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Hennequin Lab" ]
license: "MIT"
homepage: "https://github.com/hennequin-lab/gp"
dev-repo: "git+https://github.com/hennequin-lab/gp.git"
bug-reports: "https://github.com/hennequin-lab/gp/issues"
doc: "https://hennequin-lab.github.io/gp/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build & >= "1.1.0"}
  "base-unix"
  "owl" {>= "0.4.0"}
]
synopsis: "Gnuplot within OCaml and Owl"
